
Bugs fixed
----------
- Bug 1977 - v4Ping verbose output when not explicitly stopped
- Bug 2057 - ARP and Ndisc caches should be updated by receiving valid L3 packets
- Bug 2346 - SixLowPan ConpressionThreshold can be violated.
- Bug 2329 - TCP Veno implementation
- Bug 2333 - TCP Scalable implementation
- Bug 2347 - LrWpan Ascii traces are hooked to the wrong traces.
- Bug 2353 - TCP Vegas implementation
- Bug 2375 - Flowmonitor parse crashes when no pkt is received
- Bug 2377 - SocketIpTosTag and SocketIpv6TclassTag may be added twice in UDP
- Bug 2383 - IPv4 header for reassembled packets reports a wrong payload size
- Bug 2392 - SYN segment advertised window should not be scaled
- Bug 2396 - move utility functions to WifiPhy
- Bug 2397 - add backoff and cw tracing to EDCA
- Bug 2398 - add SNR tag to beacons and probe responses
- Bug 2406 - Poor 802.11g performance in ad-hoc mode
- Bug 2414 - UdpSocket doesn't call NotifyConnectionFailed
- Bug 2419 - BsmApplication should use RecvFrom and not SocketAddressTag
- Bug 2425 - UdpSocketImpl simplification

Known issues
------------
In general, known issues are tracked on the project tracker available
at http://www.nsnam.org/bugzilla/

Release 3.25
============

Availability
------------
This release is not yet available.

Supported platforms
-------------------
To be determined.

New user-visible features
-------------------------
- (internet) The native TCP implementation has been refactored, for the following
  improvements:  1) congestion control has been aligned with the Linux
  architecture, to facilitate easier coding of new congestion control algorithms
  or porting implementations from the Linux kernel, 2) Fast Retransmit and Fast
  recovery algorithms, compliant to RFCs, are shared by all TCP variants, unlike
  previous releases. 3) TCP Hybla and TCP HighSpeed have been added.
- (routing) The PrintRoutingTable* functions now print the following informations